logs/vimpdb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vim_bridge'...
Listing './lib/python3.5/site-packages/vim_bridge-0.5.egg-info'...
Listing './lib/python3.5/site-packages/vimpdb'...
Compiling './lib/python3.5/site-packages/vimpdb/config.py'...
***   File "./lib/python3.5/site-packages/vimpdb/config.py", line 93
    except errors.BadRCFile, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vimpdb/tests'...
Listing './lib/python3.5/site-packages/vimpdb/tests/scripts'...
Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/compatiblevim.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/compatiblevim.py", line 1
    print "+clientserver +python"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/incompatiblevim.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/incompatiblevim.py", line 1
    print "-clientserver -python"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/nopython.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/nopython.py", line 1
    print "+clientserver -python"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/noserver.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/noserver.py", line 1
    print "-clientserver +python"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/rightserverlist.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/rightserverlist.py", line 1
    print "VIM"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vimpdb/tests/scripts/wrongserverlist.py'...
***   File "./lib/python3.5/site-packages/vimpdb/tests/scripts/wrongserverlist.py", line 1
    print "WRONG"
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vimpdb-0.4.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
